--- a/build
+++ b/build
@@ -66,8 +66,9 @@ sed -i 's/-run-dce//g' ngk/Makefile
 sed -i 's/-run-inliner//g' ngk/Makefile
 sed -i 's/-vectorizer=stripmine//g' ngk/Makefile
 sed -i 's/-invariant-load-hoisting//g' ngk/Makefile
+sed -i '888 c\KBUILD_LDFLAGS += -O2,-no-pie' ngk/Makefile
 grep -i "CFLAGS_quota_tree.o += -Wframe-larger-than=4096" ngk/fs/quota/Makefile || sed -i '$ a\CFLAGS_quota_tree.o += -Wframe-larger-than=4096' ngk/fs/quota/Makefile
-grep -i "CFLAGS_sigreturn.o += -fstack-protector" ngk/arch/arm64/kernel/vdso32/Makefile || sed -i '$ a\CFLAGS_sigreturn.o += -fstack-protector' ngk/arch/arm64/kernel/vdso32/Makefile
+grep -i 'VDSO_AFLAGS += -Wa,--noexecstack' ngk/arch/arm64/kernel/vdso32/Makefile || sed -i '117 a\VDSO_AFLAGS += -Wa,--noexecstack' ngk/arch/arm64/kernel/vdso32/Makefile
 sed -i '1124c\           uint8_t mdie[SIR_MDIE_SIZE]);' ngk/drivers/staging/qcacld-3.0/core/mac/src/include/parser_api.h
 sed -i '83c\    unsigned int online:1;' ngk/drivers/usb/gadget/function/f_accessory.c
 sed -i '89c\    unsigned int disconnected:1;' ngk/drivers/usb/gadget/function/f_accessory.c
@@ -110,6 +111,10 @@ fi
 
 sed -i 's/\&\&\ CM_ENABLED/\&\&\ (bool)CM_ENABLED/g' ngk/drivers/input/touchscreen/cyttsp5/cyttsp5_device_access.c
 sed -i 's/\&\&\ CP_ENABLED/\&\&\ (bool)CP_ENABLED/g' ngk/drivers/input/touchscreen/cyttsp5/cyttsp5_device_access.c
+sed -i '864 c\    struct sched_param param;
+    param.sched_priority = MAX_USER_RT_PRIO / 2;' ngk/drivers/input/touchscreen/focaltech_touch/focaltech_core.c
+sed -i '1087 c\    struct sched_param param;
+    param.sched_priority = MAX_USER_RT_PRIO / 2;' ngk/drivers/input/touchscreen/nt36xxx/nt36xxx.c
 
 # set local version without scm
 sed -i '168c\    res="$res"' ngk/scripts/setlocalversion
